2003-03-22  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/x11/XGServerWindow.m ([XGServer -orderwindow:::]): 
	Use XWithDrawWindow instead of XUnmapWindow as suggested by
	Xlib programming manuals.

2003-03-03 20:05  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Remap glyph numbers from freetype so
	NSNullGlyph is never used.

2003-03-01  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m
	In [setupAttributes] moved the call to open the XFT font further
	to the back as Derek Zhou claims that this takes over the
	ownership of the pattern, which then results in strange behaviour.
	
2003-02-27  Fred Kiefer <FredKiefer@gmx.de>

	* configure.ac
	Check for FreeType 2 fontconfig.
	* configure
	* config.h.in
	Regenerated
	* Header/xlib/GSXftFontInfo.h
	Define font enumerator for fontconfig.	
	* Source/xlib/XGContext.m
	Use new enumerator in anti-alias mode if available.
	* Source/xlib/GSXftFontInfo.m
	Added fontconfig specific code.
	Patch from Derek Zhou dzhou@chrontel.com with some adaption
	
2003-03-24  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.5

2003-03-11  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Only add libgdi32 for winlib

2003-03-08  Adam Fedor  <fedor@gnu.org>

	* Headers/x11/XGOpenGL.h: Standardize BOOL redefine to XWINDOWSBOOL.

2003-02-24  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.4

2003-02-20  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/xlib/XGFont.m ([XGFontInfo -setupAttributes]): Use
	ascender and descender informaton of the X11 font instead of using
	maximum bounding box.

2003-02-19  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSStreamContext.m (fpfloat): New function. Used everywhere
	to print a float regardless of current locale.

2003-02-17  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/x11/XGDragView.m ([XGDragView -drawRect:]): use [self
	frame] instead of `rect'.  Fixes #101846.
	([XGDragView -_handleDrag:]): Fixed typo in comment